fixed displaying bug on mobile

--- a/cafe-app/src/styles/globals.css
+++ b/cafe-app/src/styles/globals.css
@@ -5,9 +5,9 @@
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --foreground-rgb: #FFF0F5;
-  --background-start-rgb:#FFF0F5;
-  --background-end-rgb: #FFF0F5;
+  --foreground-rgb: #fff0f5;
+  --background-start-rgb: #fff0f5;
+  --background-end-rgb: #fff0f5;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -42,9 +42,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: #FFF0F5;
-    --background-start-rgb: #FFF0F5;
-    --background-end-rgb: #FFF0F5;
+    --foreground-rgb: #fff0f5;
+    --background-start-rgb: #fff0f5;
+    --background-end-rgb: #fff0f5;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
@@ -108,6 +108,9 @@ a {
   object-fit: cover; /* IE: not support */
   width: 100%;
   height: 100%;
+}
+.ReactModal__Body--open {
+  posotion: fixed;
 }
 
 @tailwind base;
